@startuml consent-status
' consentStatus — CTX-CONSENT, INV-CNS-01. PROPOSAL, AI. Source: SRC-IG §4.14.2, §14.15.
' The ASPSP may add further codes (§14.15); none are proposed.
title consentStatus (AIS consent)

[*] --> received : POST /v1/consents
received --> valid : authorisation finalised
received --> rejected : authorisation failed / not authorised
received --> partiallyAuthorised : one of several required\nauthorisations finalised (multilevel, not in MVP)
partiallyAuthorised --> valid : last required authorisation finalised
partiallyAuthorised --> rejected : an authorisation failed
valid --> expired : validUntil passed /\none-off consent used
valid --> revokedByPsu : PSU revokes at the bank
valid --> terminatedByTpp : DELETE /v1/consents/{consentId}
valid --> expired : newer recurring consent authorised\n(§6.3.1.1 — or terminatedByTpp per §4.14.2? Q-08)
rejected --> [*]
expired --> [*]
revokedByPsu --> [*]
terminatedByTpp --> [*]

note right of received
  Can a 'received' consent be deleted by the TPP
  or revoked by the PSU? Not stated (EXMAP-PSU-REVOKE).
end note
@enduml
